a project in node that connect to the DB by CRUD

--- a/table.html
+++ b/table.html
@@ -98,7 +98,8 @@
             </td>
             <td>-</td>
             <td>update</td>
-            <td>  401-משתמש לא מוזהה, ו-403- משתמש לא מורשה, 404- פרמטרים לא חוקיים ו-400 לשגיאה כללית</br>404- קוד לא תקין</td>
+            <td> 401-משתמש לא מוזהה, ו-403- משתמש לא מורשה, 404- פרמטרים לא חוקיים ו-400 לשגיאה כללית</br>404- קוד לא
+                תקין</td>
             <td>עדכון מוצר מסוים</td>
         </tr>
         <tr>
@@ -146,7 +147,8 @@
             <td>post</td>
             <td>api/user</td>
             <td>-</td>
-            <td> tz:requird,  name:requird, DateOfReg:default-new Date:requird , password:requird, -(role:default-user) </td>
+            <td> tz:requird, name:requird, DateOfReg:default-new Date:requird , password:requird, -(role:default-user)
+            </td>
             <td>-</td>
             <td> tz, name, DateOfReg , role , token</td>
             <td>-</td>
@@ -159,7 +161,7 @@
             <td>post</td>
             <td>api/user/login</td>
             <td>-</td>
-            <td>  name:requird, password:requirdtz, DateOfReg:default-new Date, -(role:default-user) </td>
+            <td> name:requird, password:requirdtz, DateOfReg:default-new Date, -(role:default-user) </td>
             <td>-</td>
             <td> tz, name, DateOfReg , role ,token</td>
             <td> -</td>
@@ -237,7 +239,8 @@
                 orderDate:{new Date}</td>
             <td>-</td>
             <td>create</td>
-            <td> 401- משתמש לא מוזההת 404 פרמטרים לא חוקיים/אין מוצרים בהזמנה/אין מוצר כזה . 409 כאשר קיים כבר כזה הזמנה ו-400 לשגיאה כללית</td>
+            <td> 401- משתמש לא מוזההת 404 פרמטרים לא חוקיים/אין מוצרים בהזמנה/אין מוצר כזה . 409 כאשר קיים כבר כזה הזמנה
+                ו-400 לשגיאה כללית</td>
             <td>הוספת הזמנה חדשה</td>
 
         </tr>
@@ -275,5 +278,10 @@
             <td>מחיקה הזמנה מסוימת</td>
         </tr>
     </table>
-
+    <link rel="icon" type="image/png"
+        href="https://www.michele.com/on/demandware.static/Sites-michele-us-Site/-/default/dw0776ebef/images/favicons/favicon-96x96.png"
+        sizes="96x96">
+    <!-- <link rel="icon" type="image/png" href="https://www.michele.com/on/demandware.static/Sites-michele-us-Site/-/default/dwa5fb314b/images/favicons/favicon-58x58.png" sizes="58x58"> -->
+    <!-- <link rel="icon" type="image/png" href="https://www.michele.com/on/demandware.static/Sites-michele-us-Site/-/default/dw2c82d086/images/favicons/favicon-32x32.png" sizes="32x32"> -->
+    <!-- <link rel="icon" type="image/png" href="https://www.michele.com/on/demandware.static/Sites-michele-us-Site/-/default/dw77521491/images/favicons/favicon-128.png" sizes="128x128"> -->
 </body>
